--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -6,9 +6,21 @@
   flex-direction: column;
   overflow: hidden;
   width: 335px;
+
   @media(max-width: 480px) {
-   align-items: center;   
+    align-items: center;
   }
+
+  // &-imagem1 {
+  //   height: 160px;
+  //   margin: 0 auto;
+
+  //   img {
+  //     width: 100%;
+  //     height: 100%;
+  //   }
+  // }
+
   &-descricao {
     background-color: #EFF9FF;
     display: flex;
@@ -16,28 +28,29 @@
     justify-content: space-between;
     flex: 1;
   }
+
   &-titulo {
     padding: 16px 16px 0 16px;
+
     h2 {
       color: #1875E8;
       font-size: 20px;
     }
+
     p {
       color: #444;
     }
   }
 
-  &-imagem {
-    margin: 0 auto;
-  }
 
   &-info {
     display: flex;
     justify-content: space-between;
+
     @media(max-width: 850px) {
-     flex-direction: column;
-     align-items: center;
-     row-gap: 10px;
+      flex-direction: column;
+      align-items: center;
+      row-gap: 10px;
     }
   }
 
@@ -51,14 +64,16 @@
     justify-content: center;
     width: 170px;
   }
+
   &-acoes {
     align-items: center;
     display: flex;
     flex: 1;
     justify-content: space-evenly;
+
     @media(max-width: 850px) {
-     margin-bottom: 10px;
-     column-gap: 50px;
+      margin-bottom: 10px;
+      column-gap: 50px;
     }
   }
 
@@ -73,25 +88,39 @@
   }
 }
 
+.imagem1 {
+  width: 335px;
+  height: 160px;
+  margin: 0 auto;
+
+  img {
+    width: 100%;
+  }
+}
+
 .itemNoCarrinho {
   align-items: center;
   width: 100%;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+
   .quantidade {
     align-items: center;
     display: flex;
     gap: 10px;
     justify-content: center;
+
     svg {
       cursor: pointer;
     }
   }
+
   .item-acoes {
     gap: 50px;
     justify-content: flex-end;
     padding: 0 50px;
+
     @media(max-width: 850px) {
       margin: 10px 0;
       gap: 20px;
@@ -113,5 +142,5 @@
   background-color: #041833;
   border: solid 1px #1875E8;
   font-weight: 700;
-  
+
 }
