--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -4,11 +4,17 @@
   display: flex;
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.08));
   flex-direction: column;
-  overflow: hidden;
+  //overflow: hidden;
   width: 335px;
 
   @media(max-width: 480px) {
     align-items: center;
+  }
+
+  &-deletar {
+    position: absolute;
+    top: -10px;
+    right: -10px;
   }
 
   // &-imagem1 {
@@ -92,7 +98,7 @@
   width: 335px;
   height: 160px;
   margin: 0 auto;
-
+  overflow: hidden;
   img {
     width: 100%;
   }
